// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VariableChooser /> should match the snapshot with variables 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: auto;
  position: absolute;
  display: none;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  right: 0px;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 30px;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  border-radius: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: auto;
  height: auto;
}

.c8 {
  margin: 0;
  font-family: DM Sans;
  font-size: 18px;
  line-height: 130%;
  margin-top: 15px;
  color: rgba(176,186,201,1);
  color: rgba(176,186,201,1);
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
      <div
        class="c0"
        display="none"
        width="auto"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <div
                class="c4"
              >
                <div
                  class="c5"
                  data-testid="no-content"
                  display="flex"
                  height="100%"
                  width="100%"
                >
                  <div
                    class="c6"
                  >
                    <img
                      alt="No content"
                      class="c7"
                      src="IMAGE_MOCK"
                    />
                    <h2
                      class="c8"
                      color="#B0BAC9"
                    >
                      No variables defined yet
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Box-sc-1vhutan-0 bBMNIf"
      display="none"
      width="auto"
    >
      <div
        class="Row-y1cs0u-0 dskFsL"
      >
        <div
          class="Box-sc-1vhutan-0 buKpDj"
        >
          <div
            class="Column-sc-4zswzq-0 ekpwZH"
          >
            <div
              class="Box-sc-1vhutan-0 dbODYP"
            >
              <div
                class="Box-sc-1vhutan-0 kTgzBZ"
                data-testid="no-content"
                display="flex"
                height="100%"
                width="100%"
              >
                <div
                  class="Column-sc-4zswzq-0 eExeGs"
                >
                  <img
                    alt="No content"
                    class="Img-sc-55j3su-0 cDhXoN"
                    src="IMAGE_MOCK"
                  />
                  <h2
                    class="H2-uw8lbl-0 bnQANz"
                    color="#B0BAC9"
                  >
                    No variables defined yet
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<VariableChooser /> should match the snapshot without variables 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
}

.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: auto;
  position: absolute;
  display: none;
  background-color: rgba(255,255,255,1);
  border-radius: 10px;
  box-shadow: 0px 0px 50px rgba(0,0,0,0.08);
  border-radius: 10px;
  right: 0px;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 8px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  padding: 30px;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  height: 100%;
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 0;
  border-radius: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  width: auto;
  height: auto;
}

.c8 {
  margin: 0;
  font-family: DM Sans;
  font-size: 18px;
  line-height: 130%;
  margin-top: 15px;
  color: rgba(176,186,201,1);
  color: rgba(176,186,201,1);
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<body>
    <div>
      <div
        class="c0"
        display="none"
        width="auto"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              class="c3"
            >
              <div
                class="c4"
              >
                <div
                  class="c5"
                  data-testid="no-content"
                  display="flex"
                  height="100%"
                  width="100%"
                >
                  <div
                    class="c6"
                  >
                    <img
                      alt="No content"
                      class="c7"
                      src="IMAGE_MOCK"
                    />
                    <h2
                      class="c8"
                      color="#B0BAC9"
                    >
                      No variables defined yet
                    </h2>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Box-sc-1vhutan-0 bBMNIf"
      display="none"
      width="auto"
    >
      <div
        class="Row-y1cs0u-0 dskFsL"
      >
        <div
          class="Box-sc-1vhutan-0 buKpDj"
        >
          <div
            class="Column-sc-4zswzq-0 ekpwZH"
          >
            <div
              class="Box-sc-1vhutan-0 dbODYP"
            >
              <div
                class="Box-sc-1vhutan-0 kTgzBZ"
                data-testid="no-content"
                display="flex"
                height="100%"
                width="100%"
              >
                <div
                  class="Column-sc-4zswzq-0 eExeGs"
                >
                  <img
                    alt="No content"
                    class="Img-sc-55j3su-0 cDhXoN"
                    src="IMAGE_MOCK"
                  />
                  <h2
                    class="H2-uw8lbl-0 bnQANz"
                    color="#B0BAC9"
                  >
                    No variables defined yet
                  </h2>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
